syntax = "proto3";

option go_package  = "app/api/v1";

package info;

import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info: {
    title: "gRPC HTTP Rest Service";
    version: "0.0.1";
    contact: {
      name: "gPRC HTTP Rest project";
      url: "https://github.com/3hajk/grpc-http-rest-microservice";
      email: "al.miroshnychenko@gmail.com";
    };
  };
  schemes: HTTP;
  consumes: "application/json";
  produces: "application/json";
  responses: {
    key: "404";
    value: {
      description: "Returned when the resource does not exist.";
      schema: {
        json_schema: {
          type: STRING;
        }
      }
    }
  }
};

// Service to manage list of tasks
service InfoService {
  // New info request
  rpc Info(InfoRequest) returns (InfoResponse){
    option (google.api.http) = {
      post: "/v1/info"
      body: "*"
    };
  }
}

message Info {
  // Generated UUID
  string uuid = 1;

  // Actual hash string
  string hash = 2;

  // Date and time of generation
  google.protobuf.Timestamp generationTime = 4;
}

// Request data to new info
message InfoRequest{
  // API versioning
  string api = 1;
}

// Contains data of new info
message InfoResponse{
  // API versioning
  string api = 1;

  // Response data
  Info info = 2;
}


